it is strongly recommended by S<RFC 3977>.

=item *

The F<overview.fmt> file is no longer used by INN.  Two new parameters
have been added to F<inn.conf>:  I<extraoverviewadvertised> and
I<extraoverviewhidden>.  Although B<innupgrade> takes care of the
change during C<make update>, you should make sure that your overview
database is consistent with all the fields declared in F<overview.fmt>
because they will all be advertised.  See the inn.conf(5) man page
for more information about these parameters.

=item *

The B<innreport> configuration file has slightly changed.  The new
F<innreport.conf> file shipped with INN should be used and your possible
changes backported to this new version.

=item *

The $SPOOLBASE variable has been renamed to $SPOOLDIR in B<innshellvars>
in order to be more consistent.  It impacts shell scripts only.  If you
import B<innshellvars> and use that variable in your scripts, you will
have to rename it.

=item *

B<gpgverify> is no longer included in INN,  B<pgpverify> now has better
support for GnuPG and should be used instead.

=item *

The B<auth_smb> authenticator program to check passwords with an SMB
authentication is no longer included in INN.  It was a stripped-down
version of pam_smbpass, wasn't maintained, and likely had security
problems.  To authenticate to an SMB server such as Samba, use PAM and
B<ckpasswd>'s PAM support instead.

=back

The parameters used by B<nnrpd> to provide TLS support are now
I<tlscafile>, I<tlscapath>, I<tlscertfile> and I<tlskeyfile> in
F<inn.conf>.  The F<sasl.conf> file used for that in previous versions of
INN is obsolete.  B<innupgrade> takes care of the change during C<make
update>.

The I<nntpactsync> parameter has been renamed to I<incominglogfrequency>
in F<inn.conf>; B<innupgrade> handles this renaming during the update.

In F<newsfeeds>, B<innfeed> should be run directly rather than through
B<startinnfeed>.  B<innupgrade> will attempt to take care of this
modification during C<make update>.
